FieldLayout: Correct styling regressions for align: 'inline'
* Correct spacing between the widget and the label (T155396).
* Correct label padding, it was using wrong selector.
* Correct 'help' button alignment, it was affected by label padding.

Follow-up to 52e1e893e42f197e44c1b0ee589f91d029fb1e6f.

As a side effect of this change, trying to put a variable-width
widget (like a TextInputWidget) into an inline FieldLayout, which was
never a great idea, now *really* does not work (the widget assumes
its minimal width, so e.g. for TextInputWidget, no text is visible).
This should not be a problem, I hope. For this reason, the new demos
from 17a2c26068f0a67c93f65c02cfe211f9c450de85 are corrected to use
CheckboxInputWidget there.

Bug: T155396

--- a/src/styles/layouts/FieldLayout.less
+++ b/src/styles/layouts/FieldLayout.less
@@ -38,6 +38,11 @@
 			display: table-cell;
 			vertical-align: middle;
 		}
+
+		> .oo-ui-fieldLayout-field {
+			// Since this is a "table cell", this doesn't actually mean 1px, but as narrow as possible
+			width: 1px;
+		}
 	}
 
 	.oo-ui-fieldLayout-help {
@@ -53,7 +58,8 @@
 		}
 	}
 
-	&.oo-ui-fieldLayout-align-top {
+	&.oo-ui-fieldLayout-align-top,
+	&.oo-ui-fieldLayout-align-inline {
 		.oo-ui-fieldLayout-help {
 			// HACK: The height of this ButtonWidget extends below the header line (with align: top),
 			// causing the field widget to be narrower than it should be. 0.3em chosen experimentally.
